# CS348

./: .dockerignore  .gitignore  Dockerfile  README.md  ss.xml
db/: prodgen.py  (+6 more)
rito/: Cargo.toml
rito/src/apis/: account_v1_api.rs  champion_mastery_v4_api.rs  champion_v3_api.rs  clash_v1_api.rs  configuration.rs  ddragon_champion.rs  league_exp_v4_api.rs  league_v4_api.rs  lol_challenges_v1_api.rs  lol_status_v3_api.rs  lol_status_v4_api.rs  lor_deck_v1_api.rs  lor_inventory_v1_api.rs  lor_match_v1_api.rs  lor_ranked_v1_api.rs  lor_status_v1_api.rs  match_v5_api.rs  mod.rs  spectator_v4_api.rs  summoner_v4_api.rs  tft_league_v1_api.rs  tft_match_v1_api.rs  tft_status_v1_api.rs  tft_summoner_v1_api.rs  tournament_stub_v4_api.rs  tournament_v4_api.rs  val_content_v1_api.rs  val_match_v1_api.rs  val_ranked_v1_api.rs  val_status_v1_api.rs
rito/src/models/: account_v1_period_account_dto.rs  account_v1_period_active_shard_dto.rs  champion_mastery_v4_period_champion_mastery_dto.rs  champion_v3_period_champion_info.rs  clash_v1_period_player_dto.rs  clash_v1_period_team_dto.rs  clash_v1_period_tournament_dto.rs  clash_v1_period_tournament_phase_dto.rs  ddragon_champion.rs  error.rs  error_status.rs  league_exp_v4_period_league_entry_dto.rs  league_exp_v4_period_mini_series_dto.rs  league_v4_period_league_entry_dto.rs  league_v4_period_league_item_dto.rs  league_v4_period_league_list_dto.rs  league_v4_period_mini_series_dto.rs  lol_challenges_v1_period_apex_player_info_dto.rs  (+121 more)
server/: Cargo.toml
server/src/: error.rs  main.rs  queries.rs  state.rs  static_files.rs
(+89 files in other folders)
