[package]
name = "rito"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.145" }
serde_derive = { version = "1.0.145" }
serde_json = { version = "1.0.85" }
uuid = { version = "1.1.2" }
reqwest = { version = "0.11.12", features = ["json", "multipart"] }
url = { version = "2.3.1" }
